# funcnodes_plotly

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  THIRD_PARTY_NOTICES.md  pyproject.toml
funcnodes_plotly/: express.py  figure.py
react_plugin/: package.json
react_plugin/src/: index.tsx
src/funcnodes_plotly/: __init__.py
src/react_plugin/: package.json
src/react_plugin/src/: index.tsx  style.css
tests/: all_nodes_test_base.py  test_all_nodes.py
