[tool.poetry]
name = "funcnodes-plotly"
version = "0.1.7"
description = ""
authors = ["Julian Kimmig <julian.kimmig@gmx.net>"]
readme = "README.md"
license = "MIT"
repository="https://github.com/JulianKimmig/funcnodes_plotly"

[tool.poetry.dependencies]
python = "^3.11"
funcnodes = "*"
funcnodes_pandas = "*"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
